--- a/restaurant.html
+++ b/restaurant.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin="" />
     <link rel="manifest" href="/manifest.json">
-  <title>Restaurant Info</title>
+  <title>Chef Rate</title>
 </head>
 
 <body class="inside">
@@ -29,7 +29,7 @@
       <a href="#restaurant-name" class="skip-link" tabindex="0">Skip to main content</a>
       <nav>
         <h1>
-          <a href="/"><i class="fas fa-utensils"></i> Restaurant Reviews</a>
+          <a href="/"><i class="fas fa-utensils"></i> Chef Rate</a>
         </h1>
       </nav>
     </header>
@@ -94,7 +94,7 @@
 
   <!-- Beginning footer -->
   <footer id="footer">
-    Copyright (c) 2018 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
+    Copyright (c) 2019 <a href="/"><strong>Chef Rate</strong></a> All Rights Reserved.
   </footer>
   <!-- End footer -->
 
