--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <header>
     <nav>
       <h1>
-        <a href="/">Restaurant Reviews</a>
+        <a href="/">Chef Rate</a>
       </h1>
     
     </nav>
@@ -64,6 +64,6 @@
     <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLxtJwG3ElpY6GTMVFxab_LJ_rekXPUzI&libraries=places&callback=initMap"></script> -->
 
 
-  <footer id="footer" aira-label="Footer, Copyright 2018 Restaurant Reviews All Rights Reserved">
-    Copyright (c) 2018 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
+  <footer id="footer" aira-label="Footer, Copyright 2019 Chef Rate All Rights Reserved">
+    Copyright (c) 2018 <a href="/"><strong>Chef Rate</strong></a> All Rights Reserved.
   </footer>
