--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <header>
     <nav>
       <h1>
-        <a href="/">Chef Rate</a>
+        <a href="https://codechad.github.io/chef-rate">Chef Rate</a>
       </h1>
     
     </nav>
@@ -65,5 +65,5 @@
 
 
   <footer id="footer" aira-label="Footer, Copyright 2019 Chef Rate All Rights Reserved">
-    Copyright (c) 2019 <a href="/"><strong>Chef Rate</strong></a> All Rights Reserved.
+    Copyright (c) 2019 <a href="https://codechad.github.io/chef-rate"><strong>Chef Rate</strong></a> All Rights Reserved.
   </footer>
