--- a/restaurant.html
+++ b/restaurant.html
@@ -29,7 +29,7 @@
       <a href="#restaurant-name" class="skip-link" tabindex="0">Skip to main content</a>
       <nav>
         <h1>
-          <a href="/"><i class="fas fa-utensils"></i> Chef Rate</a>
+          <a href="https://codechad.github.io/chef-rate"><i class="fas fa-utensils"></i> Chef Rate</a>
         </h1>
       </nav>
     </header>
@@ -94,7 +94,7 @@
 
   <!-- Beginning footer -->
   <footer id="footer">
-    Copyright (c) 2019 <a href="/"><strong>Chef Rate</strong></a> All Rights Reserved.
+    Copyright (c) 2019 <a href="https://codechad.github.io/chef-rate"><strong>Chef Rate</strong></a> All Rights Reserved.
   </footer>
   <!-- End footer -->
 
