--- a/restaurant.html
+++ b/restaurant.html
@@ -105,7 +105,7 @@
   <!--Register Service Worker-->
   <script type="text/javascript" src="js/register.js"></script>
   <!--Service Worker-->
-  <script type="text/javascript" src="/sw.js"></script>
+  <script type="text/javascript" src="sw.js"></script>
   <!--Leaflet Map-->
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
     crossorigin=""></script>
