--- a/restaurant.html
+++ b/restaurant.html
@@ -27,14 +27,14 @@
       <a href="#restaurant-name" class="skip-link" tabindex="0">Skip to main content</a>
       <nav>
         <h1>
-          <a href="https://codechad.github.io/chef-rate"><i class="fas fa-utensils"></i> Chef Rate</a>
+          <a href="./"><i class="fas fa-utensils"></i> Chef Rate</a>
         </h1>
       </nav>
     </header>
     <!-- Beginning breadcrumb -->
     <ul id="breadcrumb" role="navigation" aria-label="breadcrumb">
       <li>
-        <a href="/">Home</a>
+        <a href="./">Home</a>
       </li>
     </ul>
     <!-- End breadcrumb -->
