--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <header>
     <nav>
       <h1>
-        <a href="https://codechad.github.io/chef-rate">Chef Rate</a>
+        <a href="./">Chef Rate</a>
       </h1>
     
     </nav>
