--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
   <meta name='apple-mobile-web-app-capable' content='yes'>
   <meta name='mobile-web-app-capable' content='yes'>
   <meta name="author" content="Chad Andersen">
+  
+  <!-- icon resolutions we need it for -->
+  <link rel="icon" sizes="512x512" href="/img/touch/icon-512x512.png" type="image/png" />
+  <link rel="icon" sizes="128x128" href="/img/touch/icon-128x128.png" type="image/png" />
+  <link rel="icon" sizes="96x96" href="/img/touch/icon-96x96.png" type="image/png" />
+  <link rel="icon" sizes="72x72" href="/img/touch/icon-72x72.png" type="image/png" />
+
+  <!-- icons for chrome -->>
+  <link rel="chrome-touch-icon-192x192" href="/img/touch/chrome-touch-icon-192x192.png" type="image/png" />
+  <link rel="chrome-splashscreen-icon-384x384" href="/img/touch/chrome-splashscreen-icon-384x384.png" type="image/png" />
+  
+  <!-- reuse same icon for Safari -->
+  <link rel="apple-touch-icon" href="/img/touch/apple-touch-icon.png" type="image/png" />
+
+  <!-- multiple icons for IE -->
+  <meta name="ms-icon-144x144" content="/img/touch/ms-icon144x144.png" type="image/png" />
+  <meta name="ms-touch-icon-144x144" content="/img/touch/ms-touch-icon-144x144-precomposed.png" type="image/png" />
+  
   <link rel="icon" href="/favicon-32x32.png" type="image/png" />
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <link rel="stylesheet" href="css/styles.css">
