--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <header>
     <nav>
       <h1>
-        <a href="./">Chef Rate</a>
+        <a href="./"><img src="img/favicon-32x32.png"> Chef Rate <img src="img/favicon-32x32.png"></a>
       </h1>
     
     </nav>
