--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <header>
     <nav>
       <h1>
-        <a href="./"><img src="img/favicon-32x32.png"> Chef Rate <img src="img/favicon-32x32.png"></a>
+        <a href="/"><img src="img/favicon-32x32.png"> Empire Eats <img src="img/favicon-32x32.png"></a>
       </h1>
     
     </nav>
@@ -81,6 +81,6 @@
     <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLxtJwG3ElpY6GTMVFxab_LJ_rekXPUzI&libraries=places&callback=initMap"></script> -->
 
 
-  <footer id="footer" aira-label="Footer, Copyright 2019 Chef Rate All Rights Reserved">
+  <footer id="footer" aira-label="Footer, Copyright 2019 Empire Eats All Rights Reserved">
     Copyright (c) 2019 <a href="https://codechad.github.io/chef-rate"><strong>Chef Rate</strong></a> All Rights Reserved.
   </footer>
