--- a/restaurant.html
+++ b/restaurant.html
@@ -26,6 +26,7 @@
   <!-- multiple icons for IE -->
   <meta name="ms-icon-144x144" content="/img/touch/ms-icon144x144.png" type="image/png" />
   <meta name="ms-touch-icon-144x144" content="/img/touch/ms-touch-icon-144x144-precomposed.png" type="image/png" />
+  
   <link rel="icon" href="/favicon-16x16.png" type="image/png" />
   <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
@@ -33,7 +34,7 @@
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin="" />
   <link rel="manifest" href="/manifest.json">
-  <title>Chef Rate</title>
+  <title>Empire Eats</title>
 </head>
 
 <body class="inside">
