--- a/restaurant.html
+++ b/restaurant.html
@@ -111,7 +111,7 @@
 
   <!-- Beginning footer -->
   <footer id="footer">
-    Copyright (c) 2019 <a href="https://codechad.github.io/chef-rate"><strong>Chef Rate</strong></a> All Rights Reserved.
+    Copyright (c) 2019 <a href="https://codechad.github.io/chef-rate"><strong>Empire Eats</strong></a> All Rights Reserved.
   </footer>
   <!-- End footer -->
 
