--- a/index.html
+++ b/index.html
@@ -82,5 +82,5 @@
 
 
   <footer id="footer" aira-label="Footer, Copyright 2019 Empire Eats All Rights Reserved">
-    Copyright (c) 2019 <a href="https://codechad.github.io/chef-rate"><strong>Chef Rate</strong></a> All Rights Reserved.
+    Copyright (c) 2019 <a href="https://codechad.github.io/chef-rate"><strong>Empire Eats</strong></a> All Rights Reserved.
   </footer>
