--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <header>
     <nav>
       <h1>
-        <a href="/"><img src="img/favicon-32x32.png"> Empire Eats <img src="img/favicon-32x32.png"></a>
+        <a href="/">Empire Eats</a>
       </h1>
     
     </nav>
