--- a/restaurant.html
+++ b/restaurant.html
@@ -16,7 +16,7 @@
   <link rel="icon" sizes="96x96" href="/img/touch/icon-96x96.png" type="image/png">
   <link rel="icon" sizes="72x72" href="/img/touch/icon-72x72.png" type="image/png">
 
-  <!-- icons for chrome -->>
+  <!-- icons for chrome -->
   <link rel="chrome-touch-icon-192x192" href="/img/touch/chrome-touch-icon-192x192.png">
   <link rel="chrome-splashscreen-icon-384x384" href="/img/touch/chrome-splashscreen-icon-384x384.png" type="image/png">
   
